# peri

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  dev-dag.sh  history.md  progress.md
.github/workflows/: test-riscv.yml
acpx-g/: Cargo.toml
acpx-g/src/: main.rs
docs/acp/: acp-event-alignment-report.md  acp-implementation-report.md  acp-protocol-gap-analysis.md
langfuse-client/src/: batcher.rs  client.rs  client_test.rs  config.rs  config_test.rs  error.rs  error_test.rs
peri-acp/tests/: concurrent_bg_agent_test.rs  integration_test.rs
peri-dag/: progress.md
peri-dag/static/: app.js  style.css
peri-tui/: Cargo.toml
peri-tui/src/: acp_server.rs  acp_stdio.rs  cli_args.rs  cli_plugin.rs  cli_print.rs  event.rs  jemalloc_config.rs  lib.rs  main.rs  update.rs
peri-widgets/: Cargo.toml
peri-widgets/src/: lib.rs
perihelion-lsp/: Cargo.toml
perihelion-lsp/src/: client.rs  config.rs  diagnostics.rs  error.rs  pool.rs
rust-agent-middlewares/: Cargo.toml
rust-agent-middlewares/src/: agents_md.rs  lib.rs
rust-agent-tui/: Cargo.toml
rust-agent-tui/prompts/sections/: 04_actions.md  11_subagent.md
rust-agent-tui/src/: event.rs  main.rs  prompt.rs
rust-agent-tui/src/acp/: agent_assembler.rs  dispatch.rs
rust-agent-tui/src/app/: agent.rs  agent_comm.rs  agent_compact.rs  agent_events_bg.rs  agent_events_oauth.rs  agent_events_plugin.rs  agent_ops.rs  agent_panel.rs  agent_render.rs  agent_submit.rs  ask_user_ops.rs  chat_session.rs  command_system.rs  config_panel.rs  config_panel_test.rs  cron_ops.rs  cron_state.rs  events.rs  hint_ops.rs  hint_ops_test.rs  hooks_panel.rs  login_panel.rs  mcp_panel.rs  memory_panel.rs  message_pipeline.rs  message_pipeline_test.rs  message_state.rs  mod.rs  model_panel.rs  oauth_prompt.rs  panel_manager.rs  panel_ops.rs  plugin_panel.rs  service_registry.rs  thread_ops.rs  tool_display.rs
rust-agent-tui/src/command/: agent.rs  agents.rs  compact.rs  help.rs  history.rs  loop_cmd.rs  loop_cmd_test.rs  mod.rs  mod_test.rs  model.rs  plugin_command.rs
rust-agent-tui/src/thread/: browser.rs
rust-agent-tui/src/ui/: headless.rs  headless_test.rs  main_ui.rs  message_render.rs  message_view.rs  render_thread.rs  tips.rs  tips_test.rs  welcome.rs
rust-agent-tui/src/ui/main_ui/: status_bar.rs
rust-agent-tui/src/ui/main_ui/panels/: agent.rs  config.rs  cron.rs  hooks.rs  login.rs  mcp.rs  memory.rs  model.rs  plugin.rs  status.rs  thread_browser.rs
rust-agent-tui/src/ui/main_ui/popups/: ask_user.rs  hints.rs  hitl.rs  oauth.rs  setup_wizard.rs
rust-agent-tui/src/ui/markdown/: mod.rs
rust-create-agent/src/: lib.rs
scripts/: install.sh
side-projects/daytona/: .env.example  README.md  package.json
spec/archive-issues/: 2026-05-11-auto-compact-no-resubmit.md  2026-05-11-background-agent-missing-tools.md  2026-05-11-context-usage-miscalculation-openai-compatible.md  2026-05-11-separate-test-code-from-impl.md  2026-05-11-streaming-text-invisible-with-tools.md  2026-05-12-askuserquestion-display-format.md  2026-05-12-background-agent-display-and-continuation-bugs.md  2026-05-12-cache-percentage-disappears-after-done.md  2026-05-12-cache-warning-discarded-by-rebuild.md  2026-05-12-cache-warning-uses-wrong-hit-rate.md  2026-05-12-compact-ephemeral-notes-not-cleared.md  2026-05-12-deferred-tool-list-nondeterministic-order.md  2026-05-12-glm-reasoning-field-not-parsed.md  2026-05-12-lsp-transport-no-fast-fail-on-process-exit.md  2026-05-12-remove-thinking-token-limits.md  2026-05-12-skill-preload-invalidates-prompt-cache.md  2026-05-12-subagent-final-result-display-simplify.md  2026-05-12-subagent-skip-assistant-bubble.md  2026-05-12-subagent-tool-calls-summary-format.md  2026-05-12-systemnote-position-drift-on-rebuild.md  2026-05-12-textarea-mouse-click-cursor-misposition-cjk.md  2026-05-12-thinking-reasoning-dataflow-issues.md  2026-05-12-unfocused-textarea-hide-cursor.md  2026-05-13-ai-message-thinking-invisible-during-multi-turn.md  2026-05-13-askuserquestion-cache-hit-rate-drop.md  2026-05-13-cache-hit-rate-chart-y-axis-adaptive.md  2026-05-13-cache-warning-show-request-id.md  2026-05-13-context-tab-per-request-token-chart.md  2026-05-13-input-history-message-duplication-after-background-tasks.md  2026-05-13-missing-skillpreload-in-main-agent.md  (+40 more)
(+284 files in other folders)
