[workspace]
members = [
    "rust-create-agent",
    "rust-agent-middlewares",
    "rust-agent-tui",
    "langfuse-client",
    "perihelion-widgets",
    "acpx-g",
]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# ============================================================================
# Workspace-wide dependency declarations
# Single source of truth — all crates reference via `workspace = true`.
# ============================================================================

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-test = "0.4"
futures = "0.3"
async-trait = "0.1"

# --- Serde ecosystem ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# --- HTTP ---
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- Error handling ---
anyhow = "1.0"
thiserror = "2.0"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }

# --- Utilities ---
uuid = { version = "1", features = ["v4", "v7", "serde"] }
parking_lot = "0.12"
dirs-next = "2"
url = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.34"

# --- Build ---
tempfile = "3"

# ============================================================================
# Patch rmcp to handle 200 OK + empty body as Accepted for Streamable HTTP.
# Upstream bug: https://github.com/anthropics/rmcp/issues/XXX
# Remove this patch once upstream releases a fix.
# ============================================================================
[patch.crates-io]
rmcp = { path = "rust-mcp-patch" }
