[package]
name = "acpx-g"
version = "0.1.0"
edition = "2021"
description = "DAG workflow engine — YAML-defined workflows, web API, SQLite persistence"

[lib]
name = "acpx_g"
path = "src/lib.rs"

[[bin]]
name = "acpx-g"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["macros"] }
chrono.workspace = true
reqwest = { workspace = true }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
] }
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
include_dir = "0.7"
mime_guess = "2"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
