[package]
name = "rust-agent-tui"
version = "0.1.0"
edition = "2021"
description = "TUI interface for Rust Agent - interactive terminal playground"

[lib]
name = "rust_agent_tui"
path = "src/lib.rs"

[[bin]]
name = "peri"
path = "src/main.rs"

[features]
headless = []

[dev-dependencies]

[dependencies]
serde.workspace = true
rust-create-agent = { path = "../rust-create-agent" }
rust-agent-middlewares = { path = "../rust-agent-middlewares" }
perihelion-lsp = { path = "../perihelion-lsp" }
ratatui = { version = ">=0.30", features = ["unstable-rendered-line-info"] }
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v7"] }
serde_json.workspace = true
async-trait.workspace = true
dotenvy = "0.15"
tracing.workspace = true
dirs-next.workspace = true
tui-textarea-2 = "0.10"
parking_lot.workspace = true
arboard = "3"
png = "0.18"
base64 = { version = "0.22", features = ["alloc"] }
langfuse-client = { path = "../langfuse-client" }
perihelion-widgets = { path = "../perihelion-widgets", features = [
    "markdown-highlight",
] }
unicode-width = "0.2"
unicode-segmentation = "1"
reqwest.workspace = true
clap = { version = "4", features = ["derive"] }
agent-client-protocol = { version = "0.11", features = ["unstable"] }
agent-client-protocol-tokio = { version = "0.11" }
dashmap = "6"
tokio-util.workspace = true
sysinfo.workspace = true
